<resources>
    <string name="app_name">Birthday</string>
    <string name="name">Name</string>
    <string name="add_picture">Add picture</string>
    <string name="show_birthday_screen">Show birthday screen</string>
    <string name="select_date">Select date</string>
    <string name="select_source">Select Source</string>
    <string name="baby_name">Today %s is</string>
    <string name="baby_age">%s old!</string>
    <string name="months">Months</string>
    <string name="years">Years</string>

</resources>
